--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div id="header">
         <div class="container">
@@ -35,7 +39,10 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae facere ipsum praesentium ipsam a odit, voluptas quis, dicta, corrupti ea sunt ut minima iste voluptatibus inventore placeat nulla repudiandae at iure eos voluptates delectus. Laudantium pariatur deleniti omnis officia nostrum, ea eos minus facere autem? Vel dolor et sapiente tenetur.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae facere ipsum praesentium ipsam a
+                        odit, voluptas quis, dicta, corrupti ea sunt ut minima iste voluptatibus inventore placeat nulla
+                        repudiandae at iure eos voluptates delectus. Laudantium pariatur deleniti omnis officia nostrum,
+                        ea eos minus facere autem? Vel dolor et sapiente tenetur.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -60,7 +67,8 @@
                         <ul>
                             <li><span>2025</span><br> Persuing Diploma in CSE from GWP Ranchi</li>
                             <li><span>2024</span><br>Completed Intermediate from Sahibganj College Sahibganj</li>
-                            <li><span>2022</span><br>Completed Matriculation from ST. John Berchmans' High School, Mundli</li>
+                            <li><span>2022</span><br>Completed Matriculation from ST. John Berchmans' High School,
+                                Mundli</li>
                         </ul>
                     </div>
                 </div>
@@ -75,47 +83,81 @@
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, sint? Totam atque provident illum excepturi reprehenderit obcaecati repellat dolor architecto?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, sint? Totam atque provident
+                        illum excepturi reprehenderit obcaecati repellat dolor architecto?</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop-simple"></i>
                     <h2>UI/UX Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, sint? Totam atque provident illum excepturi reprehenderit obcaecati repellat dolor architecto?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, sint? Totam atque provident
+                        illum excepturi reprehenderit obcaecati repellat dolor architecto?</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>App Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, sint? Totam atque provident illum excepturi reprehenderit obcaecati repellat dolor architecto?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, sint? Totam atque provident
+                        illum excepturi reprehenderit obcaecati repellat dolor architecto?</p>
                     <a href="#">Learn more</a>
                 </div>
             </div>
         </div>
     </div>
-   <! ---------portfolio-------->
-   <div id="portfolio">
-      <div class="container">
-         <h1 class="sub-title">My Work</h1>
-      </div>
-   </div>
+    <! ---------portfolio-------->
+        <div id="portfolio">
+            <div class="container">
+                <h1 class="sub-title">My Work</h1>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="./images/image4.jpeg">
+                        <div class="layer">
+                            <h3>Social Media App</h3>
+                            <p>The app connects you to the talented people around the world. Download it for play store.
+                            </p>
+                            <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="./images/image3.jpeg">
+                        <div class="layer">
+                            <h3>Music App</h3>
+                            <p>The app connects you to the talented people around the world. Download it for play store.
+                            </p>
+                            <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="./images/image2.jpeg">
+                        <div class="layer">
+                            <h3>Online shopping website</h3>
+                            <p>The app connects you to the talented people around the world. Download it for play store.
+                            </p>
+                            <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </div>
 
 
 
 
-    <script>
-        var tablinks = document.getElementsByClassName("tab-links");
-        var tabcontents = document.getElementsByClassName("tab-contents");
-        function opentab(tabname){
-            for(tablink of tablinks){
-                tablink.classList.remove("active-link");
+        <script>
+            var tablinks = document.getElementsByClassName("tab-links");
+            var tabcontents = document.getElementsByClassName("tab-contents");
+            function opentab(tabname) {
+                for (tablink of tablinks) {
+                    tablink.classList.remove("active-link");
+                }
+                for (tabcontent of tabcontents) {
+                    tabcontent.classList.remove("active-tab");
+                }
+                event.currentTarget.classList.add("active-link");
+                document.getElementById(tabname).classList.add("active-tab");
             }
-            for(tabcontent of tabcontents){
-                tabcontent.classList.remove("active-tab");
-            }
-            event.currentTarget.classList.add("active-link");
-            document.getElementById(tabname).classList.add("active-tab");
-        }
-    </script>
+        </script>
 </body>
+
 </html>
