--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h1 class="sub-title">My Work</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="./images/image4.jpeg">
+                        <img src="./images/service1.jpeg">
                         <div class="layer">
                             <h3>Social Media App</h3>
                             <p>The app connects you to the talented people around the world. Download it for play store.
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="./images/image3.jpeg">
+                        <img src="./images/service2.jpeg">
                         <div class="layer">
                             <h3>Music App</h3>
                             <p>The app connects you to the talented people around the world. Download it for play store.
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="./images/image2.jpeg">
+                        <img src="./images/service3.jpeg">
                         <div class="layer">
                             <h3>Online shopping website</h3>
                             <p>The app connects you to the talented people around the world. Download it for play store.
@@ -138,6 +138,32 @@
                     </div>
                 </div>
                 <a href="#" class="btn">See more</a>
+            </div>
+        </div>
+        <!------------contact-------->
+        <div id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="contact-left">
+                        <h1 class="sub-title">Contact Me</h1>
+                        <p><i class="fa-solid fa-paper-plane"></i> rimpakumari222004@gmail.com</p>
+                        <p><i class="fa-solid fa-square-phone"></i> 0000000000</p>
+                        <div class="social-icons">
+                            <a href=""><i class="fa-brands fa-facebook"></i></a>
+                            <a href="https://github.com/Rimpa-22"><i class="fa-brands fa-github"></i></a>
+                            <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3B%2BbL%2FfFcvTuiGBkx80Y3UFA%3D%3D"><i class="fa-brands fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                    <div class="contact-right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit">Submit</button>
+                    </form>
+                    </div>
+                </div>
             </div>
         </div>
 
