--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
+                    <i class="fa-solid fa-xmark"></i>
                 </ul>
+                <i class="fa-solid fa-bars"></i>
             </nav>
             <div class="header-text">
                 <p>UI/UX Designer</p>
@@ -149,21 +151,25 @@
                         <p><i class="fa-solid fa-paper-plane"></i> rimpakumari222004@gmail.com</p>
                         <p><i class="fa-solid fa-square-phone"></i> 0000000000</p>
                         <div class="social-icons">
-                            <a href=""><i class="fa-brands fa-facebook"></i></a>
                             <a href="https://github.com/Rimpa-22"><i class="fa-brands fa-github"></i></a>
                             <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            <a href="https://x.com/rimpa16381?t=YCAIp3-4PXNQlg44KXNrrg&s=08"><i class="fa-brands fa-square-x-twitter"></i></a>
                             <a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3B%2BbL%2FfFcvTuiGBkx80Y3UFA%3D%3D"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
+                        <a href="" download class="btn btn2">Download Resume</a>
                     </div>
                     <div class="contact-right">
                     <form>
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit">Submit</button>
+                        <button type="submit" class="btn btn2">Submit</button>
                     </form>
                     </div>
                 </div>
+            </div>
+            <div class="copyright">
+                <p>Copyright © Rimpa. Made with <i class="fa-solid fa-heart"></i> by Rimpa Kumari</p>
             </div>
         </div>
 
