--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>UI/UX Designer</p>
+                <p>Web Developer</p>
                 <h1>Hi, I'm <span>Rimpa</span> <br> Kumari From India</h1>
             </div>
         </div>
@@ -37,14 +37,11 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/image1.jpeg">
+                    <img src="images/image1.jpeg" height="560px">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae facere ipsum praesentium ipsam a
-                        odit, voluptas quis, dicta, corrupti ea sunt ut minima iste voluptatibus inventore placeat nulla
-                        repudiandae at iure eos voluptates delectus. Laudantium pariatur deleniti omnis officia nostrum,
-                        ea eos minus facere autem? Vel dolor et sapiente tenetur.</p>
+                    <p>I’m a passionate Front-End Developer who loves transforming ideas into interactive, user-focused digital experiences. With a blend of creativity and clean coding, I aim to craft web interfaces that are not only visually appealing but also intuitive and efficient. Every project I take on is a step toward learning something new, improving my skills, and creating designs that truly connect with people.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -53,24 +50,25 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI/UX</span><br>Designing Web interfaces</li>
-                            <li><span>Web Development</span><br>Web app Development</li>
-                            <li><span>App Development</span><br>Building Android apps</li>
+                            <li><span>Web Designing</span><br>Designing with passion, precision, and purpose to create visually engaging and user-friendly interfaces.</li>
+                            <li><span>Web Development</span><br>Transforming imagination into functional, responsive, and efficient websites that bring ideas to life.</li>
+                            <li><span>Data Analytics</span><br>Transforming raw data into meaningful insights that drive smarter decisions and real-world impact.</li>
+                            <li><span>Problem Solving</span><br>Turning challenges into innovative digital solutions.</li>
+                            <li><span>Version Control (Git & GitHub)</span><br>Collaborating, tracking, and maintaining clean, well-documented projects.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Oct,2025 - Nov, 2025</span><br>Data Analytics Internship</li>
-                            <li><span>Oct,2025 - Nov,2025 </span><br>Frontend Development Internship</li>
-                            <li><span>May,2025-June,2025</span><br>Completed 6weeks Internship in Web Development</li>
+                            <li><span>Oct 2025 – Nov 2025</span><br><b>Data Analytics Intern <br></b>Worked on analyzing datasets, visualizing insights, and assisting in data-driven decision-making processes.</li>
+                            <li><span>Oct 2025 – Nov 2025</span><br><b> Frontend Development Intern <br></b>Developed responsive and user-friendly interfaces using modern front-end technologies.</li>
+                            <li><span>May 2025 – July 2025</span><br><b> Web Development Intern (6 Weeks) <br></b> Completed a 6-week internship focusing on building and deploying dynamic web applications.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2025</span><br> Persuing Diploma in CSE from GWP Ranchi</li>
-                            <li><span>2024</span><br>Completed Intermediate from Sahibganj College Sahibganj</li>
-                            <li><span>2022</span><br>Completed Matriculation from ST. John Berchmans' High School,
-                                Mundli</li>
+                            <li><span>2025</span><br> Pursuing Diploma in Computer Science and Engineering, Government Womens’Polytechnic, Ranchi</li>
+                            <li><span>2024</span><br>Completed Intermediate from Sahibganj College, Sahibganj</li>
+                            <li><span>2022</span><br>Completed Matriculation from St. John Berchmans' High School, Mundli</li>
                         </ul>
                     </div>
                 </div>
@@ -84,23 +82,20 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, sint? Totam atque provident
-                        illum excepturi reprehenderit obcaecati repellat dolor architecto?</p>
+                    <h2>Web Development</h2>
+                    <p>I create responsive, user-friendly, and visually appealing websites that bring ideas to life. From designing layouts to developing full-featured web applications, I focus on clean code, smooth performance, and an engaging user experience.</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
-                    <i class="fa-solid fa-crop-simple"></i>
-                    <h2>UI/UX Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, sint? Totam atque provident
-                        illum excepturi reprehenderit obcaecati repellat dolor architecto?</p>
+                    <i class="fa-solid fa-code-compare"></i>
+                    <h2>Data Analytics</h2>
+                    <p>I help uncover insights hidden within data to support smarter business and project decisions. From data collection and cleaning to visualization and interpretation, I focus on transforming raw information into meaningful, actionable results.</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
-                    <i class="fa-brands fa-app-store"></i>
-                    <h2>App Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, sint? Totam atque provident
-                        illum excepturi reprehenderit obcaecati repellat dolor architecto?</p>
+                    <i class="fa-regular fa-calendar-days"></i>
+                    <h2>Upcomming</h2>
+                    <p></p>
                     <a href="#">Learn more</a>
                 </div>
             </div>
@@ -112,28 +107,28 @@
                 <h1 class="sub-title">My Work</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="./images/service1.jpeg">
+                        <img src="./images/myservice1.png" height="467px">
                         <div class="layer">
-                            <h3>Social Media App</h3>
-                            <p>The app connects you to the talented people around the world. Download it for play store.
+                            <h3>Responsive Websites</h3>
+                            <p>I design and develop fully responsive websites that adapt seamlessly to all screen sizes — from desktops to mobile devices. My focus is on delivering smooth performance, modern design, and an exceptional user experience.
                             </p>
                             <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="./images/service2.jpeg">
+                        <img src="./images/myservice2.png" height="467px">
                         <div class="layer">
-                            <h3>Music App</h3>
-                            <p>The app connects you to the talented people around the world. Download it for play store.
+                            <h3>Online Shopping Website</h3>
+                            <p>A responsive e-commerce website designed for easy product browsing, secure checkout, and a smooth user experience across all devices.
                             </p>
                             <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="./images/service3.jpeg">
+                        <img src="./images/myservice3.png" height="467px">
                         <div class="layer">
-                            <h3>Online shopping website</h3>
-                            <p>The app connects you to the talented people around the world. Download it for play store.
+                            <h3>Data Analytics Websites</h3>
+                            <p>A web platform designed to visualize and analyze data in real time. It helps users understand complex datasets through interactive charts, dashboards, and reports — making data-driven decisions simple and effective.
                             </p>
                             <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
@@ -152,11 +147,11 @@
                         <p><i class="fa-solid fa-square-phone"></i> 0000000000</p>
                         <div class="social-icons">
                             <a href="https://github.com/Rimpa-22"><i class="fa-brands fa-github"></i></a>
-                            <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/itzur.rix?igsh=MXUwYmdwNnhtMTlpeA=="><i class="fa-brands fa-instagram"></i></a>
                             <a href="https://x.com/rimpa16381?t=YCAIp3-4PXNQlg44KXNrrg&s=08"><i class="fa-brands fa-square-x-twitter"></i></a>
                             <a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3B%2BbL%2FfFcvTuiGBkx80Y3UFA%3D%3D"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
-                        <a href="" download class="btn btn2">Download Resume</a>
+                        <a href="./images/my resume.pdf" download class="btn btn2">Download Resume</a>
                     </div>
                     <div class="contact-right">
                     <form name="submit-to-google-sheet">
